Switched to java 15