@@ -14,56 +14,31 @@
         <junit4.version>4.13.1</junit4.version>
         <assertj.version>3.13.2</assertj.version>
         <pitest.version>1.4.0</pitest.version>
-        <surfire.plugin.version>2.20.1</surfire.plugin.version>
+        <surefire.plugin.version>3.0.0-M4</surefire.plugin.version>
     </properties>
 
     <build>
         <plugins>
-            <!-- Java compile plugin -->
+
+            <!-- Java compiler plugin with Error Prone (warnings enabled) -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
+                <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <encoding>UTF-8</encoding>
-                    <showDeprecation>true</showDeprecation>
-                    <showWarnings>true</showWarnings>
-                    <executable>$(/usr/libexec/java_home -v 1.8)/bin/javac</executable>
-                    <fork>true</fork>
+                    <release>${java.version}</release>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
-            <!-- Dependency plugin-->
             <plugin>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.0.2</version>
-                <executions>
-                    <execution>
-                        <id>getClasspathFilenames</id>
-                        <goals>
-                            <goal>properties</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <!-- mutation tests (aka pitest) -->
-            <plugin>
-                <groupId>org.pitest</groupId>
-                <artifactId>pitest-maven</artifactId>
-                <version>${pitest.version}</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${surefire.plugin.version}</version>
                 <configuration>
-                    <skip>false</skip>
-                    <reportsDirectory>${project.build.directory}/pit-report</reportsDirectory>
-                    <sourceDataFormats>
-                        <sourceDataFormat>HTML</sourceDataFormat>
-                    </sourceDataFormats>
-                    <avoidCallsTo>
-                        <avoidCallsTo>com.google.common.base.Preconditions</avoidCallsTo>
-                    </avoidCallsTo>
-                    <timestampedReports>false</timestampedReports>
+                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
 
@@ -79,7 +54,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>${surfire.plugin.version}</version>
+                        <version>${surefire.plugin.version}</version>
                         <configuration>
                             <excludes>
                                 <exclude>**/**/*ExhaustiveTest.java</exclude>
@@ -101,7 +76,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>${surfire.plugin.version}</version>
+                        <version>${surefire.plugin.version}</version>
                         <configuration>
                             <forkMode>once</forkMode>
                             <includes>
